--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,17 @@
 /v3_2ex4/nbproject/private/
 /v3_2ex3/build/
 /v3_2ex4/build/
+/v4_1ex1/nbproject/private/
+/v4_1ex1/build/
+/v4_1ex2/nbproject/private/
+/v4_1ex2/build/
+/v4_1ex3/nbproject/private/
+/v4_1ex3/build/
+/v4_1ex4/nbproject/private/
+/v4_1ex4/build/
+/v4_2ex4/nbproject/private/
+/v4_2ex5/nbproject/private/
+/v4_2ex5/build/
+/v4_2ex6/nbproject/private/
+/v4_2ex6/build/
+/v4_2ex8/nbproject/private/
